# machine-learning

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
automl/: README.md
automl/notebooks/: autogluon.ipynb  pycaret.ipynb  template.ipynb
bayesian_optimization/: README.md
bayesian_optimization/notebooks/: gpei.ipynb
classification_bokeh/: README.md
classification_bokeh/src/: lr_vis.py
intepretable_ml/: README.md
intepretable_ml/notebooks/: shap_xgboost.ipynb
jssc/: README.md
jssc/notebooks/: auto_regression.ipynb  metropolis-hastings.ipynb  poisson_regression.ipynb
pipeline/: README.md
pipeline/config/feature/: config.yaml
pipeline/config/model/: config.yaml
pipeline/notebooks/: template.ipynb
pipeline/src/feature/: base.py  create.py
pipeline/src/model/: run.py  runner.py
pipeline/src/utils/: utils.py
pytest_/: README.md  test.py  test_.py
vscode_python_setting/: README.md  pyproject.toml  template.ipynb  test.py
