[tool.poetry]
name = "curi"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.19.5"
matplotlib = "^3.3.3"
scikit-learn = "^0.23.2"
torch = "^1.7.1"
pandas = "^1.2.1"
ipython = "^7.19.0"
jupyter = "^1.0.0"
jupyterlab = "^3.0.5"
torchvision = "^0.8.2"
icecream = "^2.0.0"
mlflow = "^1.13.1"
pytorch-lightning = "^1.1.5"
tensorboard = "^2.4.1"
Pillow = "^8.1.0"
scikit-image = "^0.18.1"
seaborn = "^0.11.1"
tqdm = "^4.56.0"
pyarrow = "^3.0.0"
hydra-core = "^1.0.6"
bokeh = "^2.3.0"
flake8 = "^3.9.0"
black = "^20.8b1"
mxnet = "<2.0.0"
autogluon = "^0.2.0"
pycaret = "^2.3.1"
jupyterlab-code-formatter = "^1.4.10"
shap = "^0.39.0"
lightgbm = "^3.2.1"
catboost = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pysen = {version = "0.9.1", extras = ["lint"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
